objects/Job_Posting__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloudfulcrum</fullName>
                </value>
                <value>
                    <fullName>Realase Owl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Positions__c</fullName>
        <label>Number Of Positions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Applicants__c</fullName>
        <label>Number of Applicants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Candidate_Status</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Candidate Status</label>
    </listViews>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>